--- a/LYThuyet/day2/angularjs-route/pages/quan-ly-them-moi.html
+++ b/LYThuyet/day2/angularjs-route/pages/quan-ly-them-moi.html
@@ -1,9 +1,9 @@
 
 <div style="text-align: center;">
-    <div class="float-end">
+    <!-- <div class="float-end">
         <button class="btn btn-primary mb-3" ng-click="showForm()">Thêm Mới</button>
-    </div>
-    <div class="" ng-if="isShowform">
+    </div> -->
+    <div class="" >
         <form class="width 100" style="width: 600px;">
             <label class="float-start">Tên Người Yêu</label>
             <input class="form-control" ng-model="inputs.ten" placeholder="Tên người yêu">
